chore: Fix UT.